re PR rtl-optimization/10352 (ICE in find_reloads_toplev)

PR opt/10352
        Tue Jul 23 21:49:24 2002  J"orn Rennecke <joern.rennecke@superh.com>
        * simplify-rtx.c (simplify_subreg): When converting to a non-int
        mode, try to convert to an integer mode of matching size first.
	* g++.dg/opt/reload2.C: New.

From-SVN: r65441